<resources>
    <string name="app_name">GoretsTaxi</string>
    <string name="driverBtn">Я Водитель</string>
    <string name="consumerBtn">Я пассажир</string>
    <string name="driverEmail">Введите email</string>
    <string name="driverPassword">Введите пароль</string>
    <string name="signIn">Войти</string>
    <string name="forDriver">Для водителя</string>
    <string name="forPassenger">Для пассажира</string>
    <string name="registration">Регистрация</string>
    <string name="createQuestion">Еще нет аккаунта?</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="order">Вызвать такси</string>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="change_photo">Сменить фото</string>
    <string name="name">Имя</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="car">Марка авто</string>
</resources>