<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="35dp"
                android:layout_height="45dp"
                android:src="@drawable/close"
                android:tint="@android:color/white" />

            <ImageView
                android:id="@+id/saveBtn"
                android:layout_width="35dp"
                android:layout_height="45dp"
                android:src="@drawable/save_edited_info"
                android:tint="@android:color/white"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"
        android:layout_below="@id/appBarSettings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/changePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/changePhoto"
        android:layout_margin="15dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumber"
        android:layout_below="@+id/nameInput"
        android:layout_margin="15dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/carNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car"
        android:layout_below="@+id/phoneInput"
        android:layout_margin="15dp"
        android:textColor="@android:color/black"
        android:visibility="invisible"/>

</RelativeLayout>